# makefile

./: Makefile  README.md  ReadMe.txt
automake/: HowTo.txt  Makefile.am  Makefile.in  config.h.in  configure  configure.in
automake/inc/: arith.h
automake/src/: add.c  div.c  main.c  mul.c  sub.c
cmake/: CMakeLists.txt
cmake/app/: CMakeLists.txt  demo.c
cmake/lib/: CMakeLists.txt  hello.c
debug/: Makefile  Makefile.debug  Makefile.error  Makefile.example  Makefile.hello  Makefile.stop  Makefile.test  bar.h  check.mk  foo.h  main.c  qux.c  qux.h
depend/: Makefile  func_c.c  func_c.h
func/: Makefile  Makefile.call  Makefile.condition  Makefile.filename  Makefile.filter  Makefile.foreach  Makefile.info  Makefile.shell  Makefile.strip  Makefile.subst
ifelse/: Makefile
implicit/: Makefile  hello.c
kbuild/: Makefile
shell/: Makefile
variable/: Makefile.automatic  Makefile.expand  Makefile.standard  Makefile.substitute
